<resources>
    <string name="app_name">BattInfo</string>
    <string name="current">Current</string>
    <string name="status">Status</string>
    <string name="percentage">Charge</string>
    <string name="temp">Temp</string>
    <string name="wear">Wear</string>
    <string name="tbloaded">Wait..</string>
    <string name="voltage">Voltage</string>
    <string name="action_settings">Settings</string>
    <string name="action_graph">Graph</string>

    <string name="title_activity_settings">Settings</string>

    <string name="update_speed">Update every</string>
    <string name="seconds">seconds</string>
    <string name="track_button">Minimize &amp; Start Tracking</string>
    <string name="monitoring">Monitor</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
</resources>
