<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GraphActivity">

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/graph"
        android:layout_marginTop="69dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitoring"
        android:id="@+id/textViewMonitoring"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/graph"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/buttonStart"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_alignTop="@+id/textViewMonitoring"
        android:layout_toLeftOf="@+id/textViewMonitoring"
        android:layout_toStartOf="@+id/textViewMonitoring"
        android:layout_marginTop="-10dp"
        android:onClick="onStartButtonPressed" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/buttonStop"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_alignTop="@+id/textViewMonitoring"
        android:layout_toRightOf="@+id/textViewMonitoring"
        android:layout_toEndOf="@+id/textViewMonitoring"
        android:layout_marginTop="-10dp"
        android:onClick="onStopButtonPressed" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/buttonReset"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/buttonStop"
        android:layout_centerHorizontal="true"
        android:onClick="onResetButtonPressed" />

</RelativeLayout>
