<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_speed"
            android:id="@+id/update_interval"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/interval_value"
            android:layout_gravity="left|center_vertical"
            android:textSize="25sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/accent_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:layout_marginLeft="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:baselineAligned="false">

        <SeekBar
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:id="@+id/seekBar_Delay"
            android:max="9" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_button"
            android:id="@+id/buttonTrack"
            android:onClick="onTrackButtonPress" />
    </TableRow>

</LinearLayout>
